Bugfix: text wraps correctly

--- a/app/assets/stylesheets/timelines_show.css.scss
+++ b/app/assets/stylesheets/timelines_show.css.scss
@@ -89,9 +89,6 @@ body, html {
 				font-weight: bold;
 				font-size: 17px;
 			}
-			p {
-				white-space: pre;
-			}
 		}
 	}
 }
